# legendary-invention

./: Cargo.toml
src/: main.rs
static/: index.html  script.js  style.css
