[package]
name = "rust-chat"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# WebSocket
tokio-tungstenite = "0.24"

# Password hashing
argon2 = "0.5"
rand_core = "0.6"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
once_cell = "1"
